[compilation] add "--add-opens" to make code inside jvm-inc-builder work
The commit e439ba3 in intellij (7ea3178 in intellij-community) introduced a reflection call to WindowsNativeDispatcher that is not accessible by default in JDK 16+. We specify --add-opens to add the necessary library to the JVM.